# sdk

./: .gitignore  .gitmodules  pyproject.toml  run_tests.sh  setup.cfg
cloud_pipelines/: __init__.py
cloud_pipelines/components/: __init__.py  _lightweight.py  _serialization.py  _serializers.py  _serializers_ml.py
cloud_pipelines/components/structures/: __init__.py
cloud_pipelines/orchestration/: __init__.py  runners.py  runners_test.py  test_components_serializers_ml.py
cloud_pipelines/orchestration/artifact_stores/: interfaces.py  local_artifact_store.py
cloud_pipelines/orchestration/launchers/: _container_utils.py  google_cloud_batch_launcher.py  google_cloud_vertex_custom_job_launcher.py  interfaces.py  kubernetes_utils.py  local_docker_launcher.py  local_environment_launcher.py  local_kubernetes_launcher.py  naming_utils.py
cloud_pipelines/orchestration/storage_providers/: __init__.py  google_cloud_storage.py  interfaces.py  local_storage.py
pipelines/: __init__.py
pipelines/components/: __init__.py
pipelines/components/structures/: __init__.py
tests/: test_components_serializers.py  test_components_serializers_ml.py  test_lightweight.py  test_runners.py
