[metadata]
name = cloud-pipelines
version = 0.22.12.13
author = Alexey Volkov
author_email = alexey.volkov@ark-kun.com
description = SDK for Cloud Pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cloud-Pipelines/sdk
project_urls =
    Bug Tracker = https://github.com/Cloud-Pipelines/sdk/issues
    Website = https://cloud-pipelines.net
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.7
packages = find_namespace:
install_requires =
    docker >=4.4.0 < 7.0.0
    docstring-parser
    requests
    strip-hints >= 0.1.8
    PyYAML

[options.extras_require]
tests =
    mock

[options.packages.find]
exclude =
    *tests*
